--- a/Trampo.form
+++ b/Trampo.form
@@ -498,6 +498,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Ver Cadastros"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="openRegistersButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="tipoCliente">
       <Properties>
